...
                                </connections>
                            </tableView>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Quizzes" id="Ag2-ha-p9r">
                        <barButtonItem key="leftBarButtonItem" title="Settings" id="7xe-qF-3tR">
                            <connections>
                                <segue destination="253-bU-NL5" kind="popoverPresentation" identifier="ShowSettingsSegue" popoverAnchorBarButtonItem="7xe-qF-3tR" id="Xjq-y3-6V4">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Take the Quiz!" id="4mC-sJ-rCX">
                            <connections>
                                <segue destination="IqU-DR-If7" kind="show" identifier="ShowQuestionSegue" id="TRV-04-VaE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            </tableView>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="&lt;Subject&gt; Quiz" id="vXE-Jr-JPO">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="c1h-bS-w7B">
                            <connections>
                                <segue destination="80v-hA-Z3i" kind="show" identifier="ShowAnswerSegue" id="VoT-Th-rvJ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5pf-xm-csV">
                                <rect key="frame" x="241" y="280" width="118" height="39"/>
                                <animations/>
                                <state key="normal" title="Next Question"/>
                                <connections>
                                    <action selector="goToNextQuestion:" destination="80v-hA-Z3i" eventType="touchUpInside" id="xo8-wN-1av"/>
                                </connections>
                            </button>
                        </subviews>
                        <animations/>
...
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pxy-ac-JZA">
                                <rect key="frame" x="265" y="277" width="71" height="46"/>
                                <animations/>
                                <state key="normal" title="Finish"/>
                                <connections>
                                    <segue destination="ToQ-hf-suI" kind="show" id="Kbf-CD-ghC"/>
                                </connections>
                            </button>
                        </subviews>
                        <animations/>
...
