...
        subjectMarker.font = UIFont.boldSystemFontOfSize(12)
        contentView.addSubview(subjectMarker)
        
        let descLabelRect = CGRectMake(50, 26, 70, 15)
        let descMarker = UILabel(frame: descLabelRect)
        descMarker.textAlignment = NSTextAlignment.Right
        descMarker.text = "Desc:"
        descMarker.font = UIFont.boldSystemFontOfSize(12)
        contentView.addSubview(descMarker)
        
        let subjectValueRect = CGRectMake(130, 5, 200, 15)
        subjectLabel = UILabel(frame: subjectValueRect)
        contentView.addSubview(subjectLabel)
...
